--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -9,3 +9,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 150px;
+  height: 150px;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
