--- a/tic-tac-toe/src/styles/GameBoard.css
+++ b/tic-tac-toe/src/styles/GameBoard.css
@@ -14,7 +14,7 @@
   display: block;
 }
 
-.cell {
+.cell-empty {
   width: 100px;
   height: 100px;
   display: flex;
@@ -22,7 +22,34 @@
   justify-content: center;
   font-family: Roboto;
   font-size: 4rem;
-  background-color: #83b60d;
+  background-color: #ffffff;
+  border: 3px solid #000000;
+  cursor: pointer;
+}
+
+
+.cell-X {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Roboto;
+  font-size: 4rem;
+  background-color: crimson;
+  border: 3px solid #000000;
+  cursor: pointer;
+}
+
+.cell-O {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Roboto;
+  font-size: 4rem;
+  background-color: turquoise;
   border: 3px solid #000000;
   cursor: pointer;
 }
